changed header_img directory pathing

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    
       <header>
        <div class='intro'>
-      <img id='headerImg' src='C:\Users\lampm\LAMBDA\web-module-project-intro-css\assets\header_img.jpg'/>
+      <img id='headerImg' src='assets\header_img.jpg'/>
         
         <div class="introText">
         </br>
